--- a/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Editing_Schema_Sequence.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/asciidoc/topics/Editing_Schema_Sequence.adoc
@@ -2,21 +2,20 @@
 
 This procedure shows you how to change schema sequence.
 
-Navigate to AutomateExplorer.
+. Navigate to `Automate` -> `Explorer`.
 
-Click the class you want to change the schema sequence for.
+. Click the class you want to change the schema sequence for.
 
-Click the Schema tab.
+. Click the `Schema` tab.
 
-Click image:../images/1847.png[image] (Configuration), then
-image:../images/3436.png[image] (Edit Sequence).
+. Click image:../images/1847.png[image] (`Configuration`), then
+image:../images/3436.png[image] (`Edit Sequence`).
 
-In the Class Schema Sequencing area, click the field you want to change
-the sequence for.
-
+. In the `Class Schema Sequencing` area, click the field you want to change the sequence for.
++
 * To move a field up in the order of resolving an instance, click
-image:../images/2290.png[image] (Move selected field up).
+image:../images/2290.png[image] (`Move selected field up`).
 * To move a field down in the order of resolving an instance, click
-image:../images/2289.png[image] (Move selected field down).
+image:../images/2289.png[image] (`Move selected field down`).
 
-Click Save when you are finished editing the sequence.
+. Click `Save` when you are finished editing the sequence.
