Updated the ID of the RHSA for CFME 4.0.

--- a/doc-Release_Notes/advisories/RHSA-2015-2551.adoc
+++ b/doc-Release_Notes/advisories/RHSA-2015-2551.adoc
@@ -1,7 +1,7 @@
-[[RHBA-2015-21504]]
-=== RHBA-2015-21504
+[[RHSA-2015-2551]]
+=== RHSA-2015-2551
 
-The bugs contained in this section are addressed by advisory RHBA-2015:21504. Further information about this advisory is available at https://access.redhat.com/errata/RHBA-2015:21504.html.
+The bugs contained in this section are addressed by advisory RHSA-2015:2551. Further information about this advisory is available at https://access.redhat.com/errata/RHSA-2015:2551.html.
 
 ==== API
 
@@ -316,12 +316,5 @@ BZ#link:https://bugzilla.redhat.com/1280278[1280278]
 ------
 Previously, there was no scrollbar in the group switcher list. Therefore, if a user was a member of many groups, one could not see all groups. 
 With this release, a scrollbar has been added to the group switcher list. As a result, one can now see all groups.
-------
-
-==== vulnerability
-
-BZ#link:https://bugzilla.redhat.com/1283019[1283019]
-------
-A privilege escalation flaw was discovered in CloudForms, where in certain situations, CloudForms could read encrypted data from the database and then write decrypted data back into the database. If the database was then exported or log files generated, a local attacker might be able to gain access to sensitive information.
 ------
 
