Updated and clarified after questions from translation team. See https://mojo.redhat.com/docs/DOC-1057157 for details.

--- a/doc-Release_Notes/advisories/RHSA-2015-2551.adoc
+++ b/doc-Release_Notes/advisories/RHSA-2015-2551.adoc
@@ -81,7 +81,7 @@ The new version of CloudForms Management Engine adds the ability to do a full tr
 
 BZ#link:https://bugzilla.redhat.com/1222591[1222591]
 ------
-In Red Hat CloudForms 3.2 (CloudForms Management Engine 5.4), the cloud-init function blocks SSH access for the root user to virtual machines hosted in Red Hat Enterprise Virtualization 3.4 environments. Note that this issue only occurs in Red Hat Enterprise Virtualization 3.4, and that cloud-init functions correctly for Red Hat Enterprise Virtualization 3.3 and Red Hat Enterprise Virtualization 3.5. This issue will be addressed in a future release.
+In Red Hat CloudForms 3.2 (CloudForms Management Engine 5.4) and above, the cloud-init function blocks SSH access for the root user to virtual machines hosted in Red Hat Enterprise Virtualization 3.4 environments. Note that this issue only occurs in Red Hat Enterprise Virtualization 3.4, and that cloud-init functions correctly for Red Hat Enterprise Virtualization 3.3 and Red Hat Enterprise Virtualization 3.5. This issue will be addressed in a future release.
 ------
 
 BZ#link:https://bugzilla.redhat.com/1227426[1227426]
@@ -103,7 +103,7 @@ BZ#link:https://bugzilla.redhat.com/1247298[1247298]
 ------
 Multi-tenancy provides a mechanism to group or isolate resources and identity via a single instance of the software serving multiple client organizations (tenants). It enables sharing of resources and costs across a large pool of users to allow for:
 -Centralization of infrastructure in locations with lower costs (e.g. real estate, electricity)
--Peak-load capacity increases (users need not engineer for highest possible load-levels
+-Peak-load capacity increases (users need not engineer for highest possible load-levels)
 -Utilization and efficiency improvements for systems that are often only 10-20% utilized
 ------
 
