--- a/doc-Release_Notes/advisories/RHSA-2015-2551.adoc
+++ b/doc-Release_Notes/advisories/RHSA-2015-2551.adoc
@@ -308,8 +308,7 @@ This patch fixes respective 'button' methods to render flash message partially w
 
 BZ#link:https://bugzilla.redhat.com/1278463[1278463]
 ------
-Datastore scans are only supported against datastores belonging to a VMware provider. However, in the previous CloudForms release, the scan option in the web user interface displayed for datastores from all sources. As a result, initiating a SmartState Analysis scan on a non-VMware datastore returned an error.
-With this release, code was added to only allow Smart State Analysis for VMware storage records in the web user interface. As a result, the SSA button now only shows when using a VMware datastore.
+Datastore scans are only supported against datastores belonging to a VMware provider. However, in the previous CloudForms release, the scan option in the web user interface displayed for datastores from all sources. As a result, initiating a SmartState Analysis scan on a non-VMware datastore returned an error. With this release, code was added to only allow Smart State Analysis for VMware storage records in the web user interface. As a result, the SSA button now only shows when using a VMware datastore.
 
 BZ#link:https://bugzilla.redhat.com/1280278[1280278]
 ------
