--- a/doc-Scripting_Actions/topics/Editing_Schema_Sequence.adoc
+++ b/doc-Scripting_Actions/topics/Editing_Schema_Sequence.adoc
@@ -3,7 +3,7 @@
 
 This procedure shows you how to change schema sequence.
 
-. Navigate to menu:Automate[Explorer].
+. Navigate to menu:Automation[Automate > Explorer].
 
 . Click the class you want to change the schema sequence for.
 
